I should commit more often, the commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,14 @@ set(LINUX_MAINTAINER_EMAIL "me@mymailhost.com")
 
 # Add your custom source files here - header files are optional and only required for visibility
 # e.g. in Xcode or Visual Studio
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.cpp)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE 
+  src/plugin-main.cpp
+  src/plugin-main.hpp
+  src/pypylog_entry.cpp
+  src/pypylog_entry.hpp
+  src/pypy_utils.cpp
+  src/pypy_utils.hpp
+)
 
 # Import libobs as main plugin dependency
 find_package(libobs REQUIRED)
